# translate-yt-to-spanish

./: README.md  pyproject.toml
src/: Translate_english_to_spanish.ipynb  queries.m4a  translateandqa.py
